Bug #1680 - Group > discussion subnav spacing
Also addressed some additiona inline menu spacing issues

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -112,7 +112,8 @@ blockquote {
             display: inline-block;
             margin-bottom: 0;
             border-right: 1px solid @80gray;
-            a{
+            a,
+            span{
                 color: @black;
                 display: inline-block;
                 padding: 0 7px;
